<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:elevation="10dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".app.MainActivity">

        <TextView
            android:id="@+id/tvSuperClone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/super_clone"
            android:textColor="@color/label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvTs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/clone_angel"
            app:layout_constraintEnd_toEndOf="@+id/tvSuperClone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSuperClone" />

        <Spinner
            android:id="@+id/spinnerAngel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="52dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="52dp"
            android:entries="@array/clone"
            app:layout_constraintBottom_toBottomOf="@+id/tvTs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTs"
            app:layout_constraintTop_toTopOf="@+id/tvTs" />

        <TextView
            android:id="@+id/tvInsectQueen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/clone_insect_queen"
            app:layout_constraintStart_toStartOf="@+id/tvTs"
            app:layout_constraintTop_toBottomOf="@+id/tvTs" />

        <Spinner
            android:id="@+id/spinnerInsectQuene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/clone"
            app:layout_constraintBottom_toBottomOf="@+id/tvInsectQueen"
            app:layout_constraintStart_toStartOf="@+id/spinnerAngel"
            app:layout_constraintTop_toTopOf="@+id/tvInsectQueen" />

        <TextView
            android:id="@+id/tvNano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/clone_nano"
            app:layout_constraintStart_toStartOf="@+id/tvInsectQueen"
            app:layout_constraintTop_toBottomOf="@+id/tvInsectQueen" />

        <Spinner
            android:id="@+id/spinnerNano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/clone"
            app:layout_constraintBottom_toBottomOf="@+id/tvNano"
            app:layout_constraintStart_toStartOf="@+id/spinnerInsectQuene"
            app:layout_constraintTop_toTopOf="@+id/tvNano" />

        <TextView
            android:id="@+id/tvMutant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/mutant"
            app:layout_constraintStart_toStartOf="@+id/tvNano"
            app:layout_constraintTop_toBottomOf="@+id/tvNano" />

        <Spinner
            android:id="@+id/spinnerMutant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/clone"
            app:layout_constraintBottom_toBottomOf="@+id/tvMutant"
            app:layout_constraintStart_toStartOf="@+id/spinnerNano"
            app:layout_constraintTop_toTopOf="@+id/tvMutant" />

        <TextView
            android:id="@+id/tvDragon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/dragon"
            app:layout_constraintStart_toStartOf="@+id/tvMutant"
            app:layout_constraintTop_toBottomOf="@+id/tvMutant" />

        <Spinner
            android:id="@+id/spinnerDragon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/clone"
            app:layout_constraintBottom_toBottomOf="@+id/tvDragon"
            app:layout_constraintStart_toStartOf="@+id/spinnerMutant"
            app:layout_constraintTop_toTopOf="@+id/tvDragon" />

        <TextView
            android:id="@+id/tvLksjs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/lksjs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvDragon"
            app:layout_constraintStart_toStartOf="@+id/tvDragon"
            app:layout_constraintTop_toBottomOf="@+id/tvDragon" />

        <Spinner
            android:id="@+id/spinnerLksjs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/clone"
            app:layout_constraintBottom_toBottomOf="@+id/tvLksjs"
            app:layout_constraintEnd_toEndOf="@+id/spinnerDragon"
            app:layout_constraintStart_toStartOf="@+id/spinnerDragon"
            app:layout_constraintTop_toTopOf="@+id/tvLksjs" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>